# perlang

./: .clang-format  .editorconfig  .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Directory.Build.props  LICENSE  Makefile  NOTICE.md  Perlang.sln  Perlang.sln.DotSettings  README.md  StyleCop.ruleset  global.ruleset  mkdocs.yml  pyproject.toml  stylecop.json
.github/workflows/: dotnetcore.yml  installer.yml  perlang-install.yml  publish-packages.yml  publish-release-packages.yml  publish-snapshot-packages.yml  publish-website.yml  test.yml  website.yml
Perlang.Common/: CommonConstants.cs  Expr.cs  GlobalCallableAttribute.cs  GlobalClassAttribute.cs  GlobalFunctionAttribute.cs  IBinding.cs  ICallable.cs  IEnvironment.cs  IInterpreter.cs  ITokenAwareExpr.cs  NativeCallable.cs  Perlang.Common.csproj  PerlangClass.cs  RuntimeError.cs  Stmt.cs  Token.cs  TokenType.cs  TypeReference.cs  Utils.cs  VisitorBase.cs  VoidObject.cs
Perlang.Common/Attributes/: ArgumentsSetterAttribute.cs  GlobalClassAttribute.cs  GlobalFunctionAttribute.cs
Perlang.ConsoleApp/: Perlang.ConsoleApp.csproj  Program.cs
Perlang.ConsoleApp/Properties/: AssemblyInfo.cs
Perlang.Interpreter/: Binding.cs  Delegates.cs  ErrorHandlers.cs  Exceptions.cs  ICallable.cs  IInterpreter.cs  IResolveErrorHandler.cs  IRuntimeErrorHandler.cs  Perlang.Interpreter.csproj  PerlangAssemblyLoadContext.cs  PerlangEnvironment.cs  PerlangFunction.cs  PerlangInterpreter.cs  Program.cs  ResolveErrors.cs  Resolver.cs  Return.cs  RuntimeError.cs  TargetAndMethodContainer.cs  ValidationError.cs
Perlang.Interpreter/Extensions/: DictionaryExtensions.cs  TokenTypeExtensions.cs  TypeExtensions.cs
Perlang.Interpreter/Immutability/: ImmutabilityValidator.cs
Perlang.Interpreter/Properties/: AssemblyInfo.cs
Perlang.Interpreter/Resolution/: Binding.cs  ClassBinding.cs  ClassBindingFactory.cs  FunctionBinding.cs  FunctionBindingFactory.cs  IBindingFactory.cs  IDistanceAwareBinding.cs  INamedParameterizedBinding.cs  MethodBinding.cs  NameResolutionError.cs  NativeBinding.cs  NativeClassBinding.cs  NativeClassBindingFactory.cs  NativeObjectBinding.cs  ResolveError.cs  Resolver.cs  TypeReferenceAndFunction.cs  TypeReferenceNativeFunction.cs  VariableBinding.cs  VariableBindingFactory.cs
Perlang.Interpreter/Typing/: TypeValidationError.cs  TypeValidationErrors.cs  TypeValidator.cs
Perlang.Parser/: ErrorHandlers.cs  IParseErrorHandler.cs  IScannerErrorHandler.cs  ParseError.cs  ParseErrorHandler.cs  ParseErrorType.cs  ParseErrors.cs  Perlang.Parser.csproj  PerlangParser.cs  ScanErrorHandler.cs  ScanErrors.cs  Scanner.cs  VoidObject.cs
Perlang.Stdlib/: Perlang.Stdlib.csproj
Perlang.Stdlib/Callables/: ClockCallable.cs  PrintfCallable.cs
Perlang.Stdlib/Exceptions/: Exceptions.cs  IllegalStateException.cs  StdlibException.cs
Perlang.Stdlib/Stdlib/: Argv.cs  Base64.cs
Perlang.Tests/: Blocks.cs  EvalHelper.cs  Function.cs  MoreAssert.cs  Perlang.Tests.csproj  Precedence.cs  README.md  Return.cs  TestExceptions.cs  TypeValidatorTest.cs
Perlang.Tests.Architecture/: Perlang.Tests.Architecture.csproj
Perlang.Tests.Integration/: Blocks.cs  EvalHelper.cs  EvalResult.cs  Perlang.Tests.Integration.csproj  README.md  Return.cs
Perlang.Tests.Integration/Classes/: ClassesTests.cs
Perlang.Tests.Integration/For/: Syntax.cs
Perlang.Tests.Integration/Function/: Arguments.cs  Recursion.cs  Return.cs
Perlang.Tests.Integration/Immutability/: Function.cs  SuperGlobals.cs
Perlang.Tests.Integration/Number/: NumberTests.cs
Perlang.Tests.Integration/Operator/: AdditionAssignment.cs  Comparison.cs  Division.cs  Exponential.cs  Modulo.cs  Multiplication.cs  PostfixDecrement.cs  PostfixIncrement.cs  SubtractionAssignment.cs
docfx/: docfx.exe.config
docs/: docfx.json  filter-config.yml  index.md  syntax-grammar.md  toc.yml
release-notes/: template.md  v0.1.0.md  v0.1.1.md  v0.2.0.md  v0.3.0.md  v0.4.0.md  v0.5.0.md  v0.5.1.md  v0.6.0.md  v0.7.0.md  v0.8.0.md  v0.9.0.md
scripts/: generate_ast_classes.rb  local_install_linux.sh  mkdocs_hooks.py  num_cpus  perlang-install  publish_website.sh  time_it  update_common_constants.rb  valgrind-suppressions.txt
src/perlang_cli/: CMakeLists.txt
src/perlang_cli/src/: Makefile  common.h  mutable_string_token_type_dictionary.cc  mutable_string_token_type_dictionary.h  native_main.cc  native_main.per  numeric_token.per  perlang_cli.cc  perlang_cli.h  perlang_scanner.per  stdlib_wrappers.cc  string_token_type_dictionary.cc  string_token_type_dictionary.h  token.per  token_type.per  version.per
src/perlang_cli/test/: mutable_string_token_type_dictionary.cc
src/stdlib/: CMakeLists.txt  Doxyfile  Makefile  README.md  generate-array-classes.sh  generate-range-classes.sh
src/stdlib/src/: Base64.cc  Base64.cpp  ascii_string.cc  ascii_string.h  bigint.cc  bigint.cpp  bigint.h  bigint.hpp  bigint_array.cc  bigint_array.h  bigint_mod.cc  bigint_mod.cpp  bigint_pow.cc  bigint_pow.cpp  bigint_range.h  bool_array.cc  bool_array.h  char_array.cc  char_array.h  char_range.h  double_array.cc  double_array.h  float_array.cc  float_array.h  int_array.cc  int_array.h  int_range.h  integer.cc  integer.h  libc.h  long_array.cc  long_array.h  long_range.h  object.cc  object.h  object_array.cc  object_array.h  perlang_char.cc  perlang_char.h  perlang_stdlib.h  (+22 more)
src/stdlib/src/collections/: mutable_string_hash_set.cc  mutable_string_hash_set.h  string_hash_set.cc  string_hash_set.h
src/stdlib/src/double-conversion/: utils.h
src/stdlib/src/exceptions/: argument_error.h  error.h  illegal_state_exception.h  null_pointer_exception.h
src/stdlib/src/fmt/: format.h
src/stdlib/src/internal/: string_utils.h
src/stdlib/src/io/: file.cc  file.h
src/stdlib/src/libtommath/: SOURCE
src/stdlib/src/text/: string_builder.cc  string_builder.h  string_hashing.h
src/stdlib/src/tsl/: ordered_hash.h
src/stdlib/test/: ascii_string.cc  int_array_tests.cc  perlang_char.cc  perlang_string.cc  print.cc  string_array_tests.cc  string_builder.cc  utf16_string.cc  utf8_string.cc
src/stdlib/test/double-conversion/: cctest.h
(+383 files in other folders)
