[project]
name = "perlang-docs"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = []

[dependency-groups]
docs = [
  # Keep MkDocs on 1.x for now; MkDocs 2.x is currently incompatible with
  # Material for MkDocs. See:
  # https://squidfunk.github.io/mkdocs-material/blog/2026/02/18/mkdocs-2.0/
  "mkdocs>=1.6,<2",
  "mkdocs-material>=9.5,<10",
  "pymdown-extensions>=10.7,<11",

  # click needs to be pinned to 8.2.1 to avoid breaking live-reload in Mkdocs:
  # See: https://github.com/mkdocs/mkdocs/issues/4032
  "click==8.2.1",
]

[tool.uv]
package = false
